[package]
name = "cancomms"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
libc = "0.2"
socketcan = { version = "3.3", features = ["tokio"] }
tokio = { version = "1.40", features = ["rt", "net", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"